<resources>
    <string name="app_name">bootcamp-concrete-julho-2020</string>
    <string name="login">Login</string>
    <string name="email_empty">E-mail field is Empty!</string>
    <string name="password_empty">Password field is Empty!</string>
    <string name="password_invalid">Password is Invalid!</string>
    <string name="generic_login_error">Login/password invalid!</string>
</resources>
